--- a/.github/workflows/azure-static-web-apps-red-cliff.yml
+++ b/.github/workflows/azure-static-web-apps-red-cliff.yml
@@ -7,11 +7,11 @@ env:
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - main
+      - master
 
 jobs:
   build_and_deploy_job:
