--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "server": "node server/server.cjs",
+    "seed": "node server/cli/commands.cjs seed ./server/data/seed.json",
+    "cli": "node server/cli/commands.cjs",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,9 +14,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "commander": "^11.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "inquirer": "^8.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
